--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,10 @@ jobs:
     - run: npm run test:unit
     - name: Display softuni name
       run: echo "softuni-name kris133753"
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:     
     - name: Deploy to production
       uses: johnbeynon/render-deploy-action@v0.0.8
       with:
